got the get routes to only show when not logged in.
